# bsixsa

./: .gitignore  README.md  pyproject.toml
article/apec/: bxa_solver.py  compare_plots.ipynb  generate_ref_spectrum.py  sixsa_solver.ipynb
article/background/: bxa_solver.py
article/relxill/: bxa_solver.py  generate_ref_spectrum.py
article/summary_stats/: bxa_solver.py  compare_plots.ipynb  generate_ref_spectrum.py  sixsa_solver_mri.ipynb  sixsa_solver_mri_embedding_net.ipynb  sixsa_solver_sri.ipynb  spectrum_opt.pha  spectrum_raw.pha
article/summary_stats/results_df/: bxa.csv
demo/: fit.ipynb
demo/comptt/: athena_xifu_13_rows_no_filter.arf  bxa_dataframe.csv  fit.ipynb  model.xcm
demo/true_data/: bxa_dataframe.csv  fit.ipynb
old/: sixsa_solver_smorc.ipynb
src/bsixsa/: __init__.py  convenience.py  gof.py  plotting_stuff.py  scaterring_stuff.py  sinning.py  solver.py  summary_stats.py  xspec_stuff.py
