[project]
name = "bsixsa"
version = "0.1.0"
description = "Friendly BXA interface for SIXSA"
readme = "README.md"
authors = [
    { name = "renecotyfanboy", email = "sdupourque@irap.omp.eu" }
]
requires-python = ">=3.12"
dependencies = [
    "bxa>=4.1.4",
    "catppuccin>=2.3.4",
    "chainconsumer>=1.1.3",
    "dill>=0.3.9",
    "kymatio>=0.3.0",
    "matplotlib>=3.10.0",
    "pathos>=0.3.3",
    "pytorch-minimize>=0.0.2",
    "sbi>0.22",
    "tqdm>=4.67.1",
    "ultranest>=4.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
